--- a/s/pwords.css
+++ b/s/pwords.css
@@ -386,6 +386,14 @@ div#pwscorediv.pwscore4 {
 	color: #999 !important;
 	cursor: initial;
 }
+.disabled {
+	background: transparent !important;
+	cursor: default !important;
+}
+.disabled:hover {
+	background: transparent !important;
+	cursor: default !important;
+}
 div#help_contact { 
 	font-size: 90%; 
 	font-weight: bold; 
